<resources>
    <string name="app_name">ToDo</string>
    <string name="action_settings">Settings</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="e_g_apply_to_ziro">e.g. Apply to ZIRO</string>
    <string name="e_g_search_about_the_company_online">e.g. - search about the company online</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="upcoming_next">Upcoming Next</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="finished">Finished</string>


    <string name="facebook_app_id">addYourOwnFbId</string>
    <string name="fb_login_protocol_scheme">addYourOwnFbfbLoginProtocolScheme</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>

    <string name="channel_name">to_do</string>
    <string name="channel_description">to_do_description</string>
    <string name="overdue_tasks">Overdue Tasks</string>
    <string name="hooray_no_overdue_tasks">Hooray, no overdue tasks</string>
    <string name="overdue">Overdue</string>
    <string name="finished_tasks">Finished Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="i_don_t_want_my_todo_personalized">I don\'t want my ToDo personalized</string>
    <string name="no_target_achieved_yet">No target achieved yet !!</string>
    <string name="login_to_personalize_your_experience">Login to personalize your experience</string>
    <string name="add_a_new_bright_idea">Add a new Bright Idea</string>

</resources>
