<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hamidelmamoun.to_do.currentTasksListApp.MainActivity">

    <item
        android:id="@+id/action_overdue"
        android:orderInCategory="100"
        android:title="@string/overdue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_finished"
        android:orderInCategory="100"
        android:title="@string/finished"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_in"
        android:orderInCategory="100"
        android:title="@string/sign_in"
        app:showAsAction="never" />

</menu>
