<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".currentTasksListApp.MainActivity"
    tools:showIn="@layout/activity_main">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/empty_db_lo">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_idea"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/add_a_new_bright_idea"/>


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:clipToPadding="false"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/todayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/today"
                android:textSize="16sp"
                android:textColor="#747474"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                app:cardBackgroundColor="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/today_task_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tomorrowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tomorrow"
                android:textSize="16sp"
                android:textColor="#747474"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tomorrow_task_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/upcomingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/upcoming_next"
                android:textSize="16sp"
                android:textColor="#747474"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming_task_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>